More videos page fixes
Moved team info under the Contribute header Removed unneeded CSS after
this change.

Added whitespace above our description and metadata sections.  Made
the description DIV use the styles that it had before, for example
line-height: 150%.

Moved languages metrics box to be the 1st in the list.  Started using
table layouts for the metrics lists.  This is the easiest way to make
it render well regardless of the number of cells.

Added extra space between the various <p> elements in the Contribute
section.  Changed wording for the link to the team.

--- a/media/css/v1.scss
+++ b/media/css/v1.scss
@@ -1818,6 +1818,19 @@ body.account {
         }
     }
 
+    #metadata {
+        margin-top: 1em;
+    }
+
+    #description {
+        line-height: 150%;
+        margin-top: 1em;
+
+        p {
+            margin-bottom: .5em;
+        }
+    }
+
     ul#subtitles-menu {
         img, a, span {
             vertical-align: middle;
@@ -1833,19 +1846,8 @@ body.account {
     word-wrap: break-word;
     @include linear-gradient(right, hsla(0, 0%, 97%, 1), hsla(0, 0%, 100%, 1) 2%, hsla(0, 0%, 100%, 1));
 
-    p.permalink {
-        margin: -.5em 0 .5em;
-
-        a {
-            color: $faint;
-            font-size: 11px;
-            text-decoration: none;
-        }
-    }
-
-    .section {
-        margin: 2em 0 0 0;
-        padding: 0;
+    .contribute p {
+        margin-bottom: 1em;
     }
 
     .logo {
@@ -1885,14 +1887,6 @@ body.account {
     video, object, .unisubs-widget span.unisubs-videoplayer, audio {
         height: 173px !important;
         width: 289px !important;
-    }
-
-    #description {
-        line-height: 150%;
-
-        p {
-            margin-bottom: .5em;
-        }
     }
 
     a {
@@ -2305,19 +2299,22 @@ ol.subtitles-diff li{
 
 /* Metrics badge */
 .v1 .context .metrics {
-    border: 1px solid #eaeaea;
     color: #999;
     margin: 0;
     width: 100%;
+    display: table;
+    table-layout: fixed;
+    border-collapse: collapse;
     @include border-radius(3px);
     @include linear-gradient(top, hsla(0, 0%, 96%, 1), hsla(0, 0%, 98%, 1) 5%, hsla(0, 0%, 97%, 1));
 
     li {
-        border-right: 1px solid #eaeaea;
-        float: left;
+        margin: 0;
         padding: 0;
         text-align: center;
-        width: 33%;
+        display: table-cell;
+
+        border: 1px solid #eaeaea;
 
         a, div {
             color: #999;
@@ -2339,17 +2336,6 @@ ol.subtitles-diff li{
         }
         a:hover {
             color: #35424A;
-        }
-        &.last {
-            border: none;
-        }
-    }
-
-    &.simple li {
-        width: 49.8%;
-
-        &:last-child {
-            border: none;
         }
     }
 }
